[gd_scene load_steps=4 format=3 uid="uid://cop8ckecfyxli"]

[ext_resource type="PackedScene" uid="uid://ubyatap3sylf" path="res://src/Tools/BaseDraw.tscn" id="1_a3u7o"]
[ext_resource type="Script" uid="uid://8bbs5tywj2ya" path="res://src/Tools/DesignTools/IsometricBoxTool.gd" id="2_g8u0x"]
[ext_resource type="PackedScene" uid="uid://yjhp0ssng2mp" path="res://src/UI/Nodes/Sliders/ValueSlider.tscn" id="3_xw18e"]

[node name="ToolOptions" instance=ExtResource("1_a3u7o")]
script = ExtResource("2_g8u0x")

[node name="ThicknessSlider" parent="." index="2" instance=ExtResource("3_xw18e")]
layout_mode = 2
min_value = 1.0
value = 1.0
prefix = "Size:"
suffix = "px"
global_increment_action = "brush_size_increment"
global_decrement_action = "brush_size_decrement"

[node name="FillCheckbox" type="CheckBox" parent="." index="3"]
layout_mode = 2
tooltip_text = "Fills the drawn shape with color, instead of drawing a hollow shape"
mouse_default_cursor_shape = 2
text = "Fill Shape"

[node name="FillOptions" type="VBoxContainer" parent="." index="4"]
layout_mode = 2

[node name="Label" type="Label" parent="FillOptions" index="0"]
layout_mode = 2
text = "Edge Color"

[node name="EdgeBehavior" type="OptionButton" parent="FillOptions" index="1"]
unique_name_in_owner = true
layout_mode = 2
selected = 0
fit_to_longest_item = false
item_count = 4
popup/item_0/text = "Tool color"
popup/item_0/id = 0
popup/item_1/text = "Adjusted average"
popup/item_1/id = 1
popup/item_2/text = "Blend at interface"
popup/item_2/id = 2
popup/item_3/text = "None"
popup/item_3/id = 3

[node name="ColorFromTool" type="CheckBox" parent="FillOptions" index="2"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "From other tool"

[node name="LabelContainer" type="HBoxContainer" parent="FillOptions" index="3"]
layout_mode = 2

[node name="Label" type="Label" parent="FillOptions/LabelContainer" index="0"]
layout_mode = 2
text = "Left Face"

[node name="HSeparator" type="HSeparator" parent="FillOptions/LabelContainer" index="1"]
layout_mode = 2
size_flags_horizontal = 3

[node name="LeftShadeOption" type="OptionButton" parent="FillOptions" index="4"]
unique_name_in_owner = true
layout_mode = 2
selected = 1
item_count = 2
popup/item_0/text = "Lighten"
popup/item_0/id = 0
popup/item_1/text = "Darken"
popup/item_1/id = 1

[node name="LeftShadeSlider" parent="FillOptions" index="5" instance=ExtResource("3_xw18e")]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.0
step = 0.01
value = 0.5
prefix = "Amount:"

[node name="LabelContainer2" type="HBoxContainer" parent="FillOptions" index="6"]
layout_mode = 2

[node name="Label" type="Label" parent="FillOptions/LabelContainer2" index="0"]
layout_mode = 2
text = "Right Face"

[node name="HSeparator" type="HSeparator" parent="FillOptions/LabelContainer2" index="1"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RightShadeOption" type="OptionButton" parent="FillOptions" index="7"]
unique_name_in_owner = true
layout_mode = 2
selected = 0
item_count = 2
popup/item_0/text = "Lighten"
popup/item_0/id = 0
popup/item_1/text = "Darken"
popup/item_1/id = 1

[node name="RightShadeSlider" parent="FillOptions" index="8" instance=ExtResource("3_xw18e")]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.0
step = 0.01
value = 0.5
prefix = "Amount:"

[node name="Brush" parent="." index="5"]
visible = false

[node name="DoubleClickTimer" type="Timer" parent="." index="8"]
wait_time = 0.2
one_shot = true

[connection signal="value_changed" from="ThicknessSlider" to="." method="_on_thickness_value_changed"]
[connection signal="toggled" from="FillCheckbox" to="." method="_on_fill_checkbox_toggled"]
[connection signal="item_selected" from="FillOptions/EdgeBehavior" to="." method="_on_edge_behavior_item_selected"]
[connection signal="toggled" from="FillOptions/ColorFromTool" to="." method="_on_color_from_tool_toggled"]
[connection signal="item_selected" from="FillOptions/LeftShadeOption" to="." method="_on_left_shade_option_item_selected"]
[connection signal="value_changed" from="FillOptions/LeftShadeSlider" to="." method="_on_left_shade_slider_value_changed"]
[connection signal="item_selected" from="FillOptions/RightShadeOption" to="." method="_on_right_shade_option_item_selected"]
[connection signal="value_changed" from="FillOptions/RightShadeSlider" to="." method="_on_right_shade_slider_value_changed"]
